logs/wikid.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wikid'...
Compiling './lib/python3.5/site-packages/wikid/__main__.py'...
***   File "./lib/python3.5/site-packages/wikid/__main__.py", line 14
    print "Serving %s on port %s" % (args.path, args.port)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wikid/data'...
Listing './lib/python3.5/site-packages/wikid/data/css'...
Listing './lib/python3.5/site-packages/wikid/data/js'...
Compiling './lib/python3.5/site-packages/wikid/wsgi.py'...
***   File "./lib/python3.5/site-packages/wikid/wsgi.py", line 111
    print "Updating index ...",
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wikid-0.0.10.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
